--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ body {
     background-color: rgb(28, 28, 28);
     border-radius: 100%;
     animation: 3s infinite ease-in-out glow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tombol {
